--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,10 @@ body {
   border-radius: 5px;
 }
 
+.photo-item img :hover{
+  border-radius: 5px;
+}
+
 .photo-item .photo-details {
   width: 100%;
   height: 110%;
